--- a/package.json
+++ b/package.json
@@ -1,41 +1,50 @@
 {
-  "name": "mymusic",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
-    "build": "webpack --config build/webpack.prod.conf.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/yuyeung/music.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/yuyeung/music/issues"
-  },
-  "homepage": "https://github.com/yuyeung/music#readme",
-  "dependencies": {
-    "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.7.2",
-    "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^3.0.0",
-    "eslint": "^6.6.0",
-    "eslint-loader": "^3.0.2",
-    "html-webpack-plugin": "^3.2.0",
-    "url-loader": "^2.2.0",
-    "vue-loader": "^15.7.2",
-    "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0",
-    "webpack-merge": "^4.2.2"
-  }
+	"name": "mymusic",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+		"start": "npm run dev",
+		"build": "webpack --config build/webpack.prod.conf.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/yuyeung/music.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/yuyeung/music/issues"
+	},
+	"homepage": "https://github.com/yuyeung/music#readme",
+	"dependencies": {
+		"axios": "^0.19.0",
+		"vue": "^2.6.10",
+		"vue-awesome-swiper": "^3.1.3",
+		"vue-router": "^3.1.3"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.7.2",
+		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
+		"babel-eslint": "^10.0.3",
+		"babel-loader": "^8.0.6",
+		"clean-webpack-plugin": "^3.0.0",
+		"css-loader": "^3.2.0",
+		"eslint": "^6.6.0",
+		"eslint-loader": "^3.0.2",
+		"eslint-plugin-vue": "^6.0.1",
+		"html-webpack-plugin": "^3.2.0",
+		"less": "^3.10.3",
+		"less-loader": "^5.0.0",
+		"url-loader": "^2.2.0",
+		"vue-loader": "^15.7.2",
+		"vue-style-loader": "^4.1.2",
+		"vue-template-compiler": "^2.6.10",
+		"webpack": "^4.41.2",
+		"webpack-cli": "^3.3.10",
+		"webpack-dev-server": "^3.9.0",
+		"webpack-merge": "^4.2.2"
+	}
 }
