--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 		"axios": "^0.19.0",
 		"vue": "^2.6.10",
 		"vue-awesome-swiper": "^3.1.3",
-		"vue-router": "^3.1.3"
+		"vue-router": "^3.1.3",
+		"vuex": "^3.1.2"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.7.2",
