--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"html-webpack-plugin": "^3.2.0",
 		"less": "^3.10.3",
 		"less-loader": "^5.0.0",
+		"sass-resources-loader": "^2.0.1",
 		"url-loader": "^2.2.0",
 		"vue-loader": "^15.7.2",
 		"vue-style-loader": "^4.1.2",
