--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,15 @@
 {
-	"plugins": ["@babel/plugin-syntax-dynamic-import"]
+	"plugins": [
+		"@babel/plugin-syntax-dynamic-import",
+		[
+			"import",
+			{
+				"libraryName": "vant",
+				"libraryDirectory": "es",
+				"style": true
+			}
+		],
+		["@babel/plugin-transform-runtime"]
+	],
+	"presets": [["@babel/preset-env"]]
 }
