--- a/package.json
+++ b/package.json
@@ -20,33 +20,38 @@
 	},
 	"homepage": "https://github.com/yuyeung/music#readme",
 	"dependencies": {
-		"axios": "^0.19.0",
-		"vue": "^2.6.10",
+		"axios": "^0.19.2",
+		"vant": "^2.5.5",
+		"vue": "^2.6.11",
 		"vue-awesome-swiper": "^3.1.3",
-		"vue-router": "^3.1.3",
-		"vuex": "^3.1.2"
+		"vue-router": "^3.1.6",
+		"vuex": "^3.1.3"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.7.2",
-		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
-		"babel-eslint": "^10.0.3",
+		"@babel/core": "^7.8.7",
+		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
+		"@babel/plugin-transform-runtime": "^7.8.3",
+		"@babel/preset-env": "^7.8.7",
+		"@babel/runtime-corejs3": "^7.8.7",
+		"babel-eslint": "^10.1.0",
 		"babel-loader": "^8.0.6",
+		"babel-plugin-import": "^1.13.0",
 		"clean-webpack-plugin": "^3.0.0",
-		"css-loader": "^3.2.0",
-		"eslint": "^6.6.0",
-		"eslint-loader": "^3.0.2",
-		"eslint-plugin-vue": "^6.0.1",
+		"css-loader": "^3.4.2",
+		"eslint": "^6.8.0",
+		"eslint-loader": "^3.0.3",
+		"eslint-plugin-vue": "^6.2.2",
 		"html-webpack-plugin": "^3.2.0",
-		"less": "^3.10.3",
+		"less": "^3.11.1",
 		"less-loader": "^5.0.0",
 		"sass-resources-loader": "^2.0.1",
-		"url-loader": "^2.2.0",
-		"vue-loader": "^15.7.2",
+		"url-loader": "^3.0.0",
+		"vue-loader": "^15.9.0",
 		"vue-style-loader": "^4.1.2",
-		"vue-template-compiler": "^2.6.10",
-		"webpack": "^4.41.2",
-		"webpack-cli": "^3.3.10",
-		"webpack-dev-server": "^3.9.0",
+		"vue-template-compiler": "^2.6.11",
+		"webpack": "^4.42.0",
+		"webpack-cli": "^3.3.11",
+		"webpack-dev-server": "^3.10.3",
 		"webpack-merge": "^4.2.2"
 	}
 }
